--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -24,7 +24,7 @@ unclassified:
           scm:
             github:
               credentialsId: "cloudbees-ci-workshop-github-app"
-              repoOwner: "REPLACE_GITHUB_ORG"
+              repoOwner: "workshop-cloudbees"
               repository: "pipeline-library"
 credentials:
   system:
@@ -40,5 +40,5 @@ credentials:
           appID: "${gitHubAppId}"
           description: "CloudBees CI Workshop GitHub App credential"
           id: "cloudbees-ci-workshop-github-app"
-          owner: "REPLACE_GITHUB_ORG"
+          owner: "workshop-cloudbees"
           privateKey: "${gitHubAppPrivateKey}"
